# talentllm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: generate.py  run_bench.py  synth.py
deploy/: Dockerfile  README.md  task-definition.json
src/talentllm/: __init__.py  assistant.py  dataset.py  provider.py  retrieval.py  service.py
src/talentllm/data/: records.json
tests/: test_base.py  test_contract.py  test_grounding.py  test_phrasing.py
