[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talentllm"
version = "0.1.0"
description = "Grounded question-answering assistant over a structured talent and learning dataset"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SAY-5" }]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
talentllm = ["data/*.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=talentllm --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["talentllm"]
strict = true
